entrega causal chat